tests/snapshots/snapshot_fixtures__fixtures__long_double_extern_sin.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/long_double_extern_sin.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[5] = "sinl" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[5] = "%02x" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[2] = "\n" [cir_private, default, align 1, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn dump80(%arg0: s8i*, %arg1: long_double<f80>) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: long_double<f80>):
        %11 = alloca s8i*, "name", align 8
        %12 = alloca long_double<f80>, "value", align 16
        %13 = alloca u8i[10], "bytes", align 1
        store %arg0, %11
        store %arg1, %12
        %14 = get_global @memcpy : ((void*, void*, u64i) -> void*)*
        %15 = cast(array_to_ptrdecay) %13 : u8i*
        %16 = cast(bitcast) %15 : void*
        %17 = cast(bitcast) %12 : void*
        %18 = const 10 : u64i
        %19 = call @memcpy(%16, %17, %18) : void* [all]
        %20 = get_global @printf : ((s8i*, ...) -> s32i)*
        %21 = get_global @.str.1 : s8i[3]*
        %22 = cast(array_to_ptrdecay) %21 : s8i*
        %23 = load %11 : s8i*, align 8
        %24 = call @printf(%22, %23) : s32i [all]
        scope {
            %29 = alloca s32i, "i", align 4
            %30 = const 0 : s32i
            store %30, %29, align 4
            for cond: {
                %42 = load %29 : s32i, align 4
                %43 = const 10 : s32i
                %44 = cmp lt %42, %43 : bool
                condition %44
            } step: {
                %31 = load %29 : s32i, align 4
                %32 = inc %31 : s32i [nsw]
                store %32, %29, align 4
                yield
            } do {
                %33 = get_global @printf : ((s8i*, ...) -> s32i)*
                %34 = get_global @.str.2 : s8i[5]*
                %35 = cast(array_to_ptrdecay) %34 : s8i*
                %36 = load %29 : s32i, align 4
                %37 = cast(integral) %36 : s64i
                %38 = get_element %13[%37] : u8i*
                %39 = load %38 : u8i, align 1
                %40 = cast(integral) %39 : s32i
                %41 = call @printf(%35, %40) : s32i [all]
                yield
            }
            yield
        }
        %25 = get_global @printf : ((s8i*, ...) -> s32i)*
        %26 = get_global @.str.3 : s8i[2]*
        %27 = cast(array_to_ptrdecay) %26 : s8i*
        %28 = call @printf(%27) : s32i [all]
        return
}
fn sinl(%arg0: long_double<f80>) -> long_double<f80> [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca long_double<f80>, "x", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1.000000e+00 : long_double<f80>
    store %3, %1, align 16, volatile
    %4 = get_global @.str : s8i[5]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = get_global @sinl : ((long_double<f80>) -> long_double<f80>)*
    %7 = load %1 : long_double<f80>, align 16, volatile
    %8 = call @sinl(%7) : long_double<f80> [all]
    call @dump80(%5, %8) [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
