tests/snapshots/snapshot_fixtures__fixtures__long_double_layout.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/long_double_layout.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[9] = "%zu %zu\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[17] = "%zu %zu %zu %zu\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[9]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 16 : u64i
    %6 = const 16 : u64i
    %7 = call @printf(%4, %5, %6) : s32i [all]
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str.1 : s8i[17]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = const 48 : u64i
    %12 = const 16 : u64i
    %13 = const 16 : u64i
    %14 = const 32 : u64i
    %15 = call @printf(%10, %11, %12, %13, %14) : s32i [all]
    %16 = get_global @printf : ((s8i*, ...) -> s32i)*
    %17 = get_global @.str : s8i[9]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = const 16 : u64i
    %20 = const 16 : u64i
    %21 = call @printf(%18, %19, %20) : s32i [all]
    %22 = const 0 : s32i
    store %22, %0
    %23 = load %0 : s32i
    return %23
}
