tests/snapshots/snapshot_fixtures__fixtures__long_double_strtold_f80.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/long_double_strtold_f80.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[23] = "0x1.0000000000000002p0" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = "strtold" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[5] = "%02x" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[2] = "\n" [cir_private, default, align 1, dso_local, constant]

fn strtold(%arg0: s8i*, %arg1: s8i**) -> long_double<f80> [external, c, nothrow];
fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn dump80(%arg0: s8i*, %arg1: long_double<f80>) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: long_double<f80>):
        %23 = alloca s8i*, "name", align 8
        %24 = alloca long_double<f80>, "value", align 16
        %25 = alloca u8i[10], "bytes", align 1
        store %arg0, %23
        store %arg1, %24
        %26 = get_global @memcpy : ((void*, void*, u64i) -> void*)*
        %27 = cast(array_to_ptrdecay) %25 : u8i*
        %28 = cast(bitcast) %27 : void*
        %29 = cast(bitcast) %24 : void*
        %30 = const 10 : u64i
        %31 = call @memcpy(%28, %29, %30) : void* [all]
        %32 = get_global @printf : ((s8i*, ...) -> s32i)*
        %33 = get_global @.str.3 : s8i[3]*
        %34 = cast(array_to_ptrdecay) %33 : s8i*
        %35 = load %23 : s8i*, align 8
        %36 = call @printf(%34, %35) : s32i [all]
        scope {
            %41 = alloca s32i, "i", align 4
            %42 = const 0 : s32i
            store %42, %41, align 4
            for cond: {
                %54 = load %41 : s32i, align 4
                %55 = const 10 : s32i
                %56 = cmp lt %54, %55 : bool
                condition %56
            } step: {
                %43 = load %41 : s32i, align 4
                %44 = inc %43 : s32i [nsw]
                store %44, %41, align 4
                yield
            } do {
                %45 = get_global @printf : ((s8i*, ...) -> s32i)*
                %46 = get_global @.str.4 : s8i[5]*
                %47 = cast(array_to_ptrdecay) %46 : s8i*
                %48 = load %41 : s32i, align 4
                %49 = cast(integral) %48 : s64i
                %50 = get_element %25[%49] : u8i*
                %51 = load %50 : u8i, align 1
                %52 = cast(integral) %51 : s32i
                %53 = call @printf(%47, %52) : s32i [all]
                yield
            }
            yield
        }
        %37 = get_global @printf : ((s8i*, ...) -> s32i)*
        %38 = get_global @.str.5 : s8i[2]*
        %39 = cast(array_to_ptrdecay) %38 : s8i*
        %40 = call @printf(%39) : s32i [all]
        return
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "end", align 8
    %2 = alloca long_double<f80>, "value", align 16
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @strtold : ((s8i*, s8i**) -> long_double<f80>)*
    %5 = get_global @.str : s8i[23]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = call @strtold(%6, %1) : long_double<f80> [all]
    store %7, %2, align 16
    %8 = get_global @.str.1 : s8i[8]*
    %9 = cast(array_to_ptrdecay) %8 : s8i*
    %10 = load %2 : long_double<f80>, align 16
    call @dump80(%9, %10) [all]
    %11 = get_global @printf : ((s8i*, ...) -> s32i)*
    %12 = get_global @.str.2 : s8i[4]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = load %1 : s8i*, align 8
    %15 = load %14 : s8i, align 1
    %16 = cast(integral) %15 : s32i
    %17 = const 0 : s32i
    %18 = cmp eq %16, %17 : bool
    %19 = cast(bool_to_int) %18 : s32i
    %20 = call @printf(%13, %19) : s32i [all]
    %21 = const 0 : s32i
    store %21, %0
    %22 = load %0 : s32i
    return %22
}
